--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react-spring": "^8.0.27",
     "slick-carousel": "^1.8.1"
   },
-  "scripts": {
+  "scripts": {    
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
+ },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -39,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
+  }, 
+  "homepage": "http://georgelzeng.github.io/"
 }
