--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://georgelzeng.github.io/",
   "name": "personal_website",
   "version": "0.1.0",
   "private": true,
@@ -45,5 +46,5 @@
   "devDependencies": {
     "gh-pages": "^2.2.0"
   }, 
-  "homepage": "http://georgelzeng.github.io/"
+
 }
