new read me and url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://georgelzeng.github.io/",
+  "homepage": "http://georgelzeng.github.io/portfolio",
   "name": "personal_website",
   "version": "0.1.0",
   "private": true,
